OOB: Add progress to import

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -42,6 +42,12 @@
 				"optional": "Optional Columns",
 				"others": "Others"
 			}
+		},
+
+		"progress": {
+			"title": "Your CSV Import is in progress!",
+			"subTitle": "Please wait on this page as the data is loaded into the system. Closing the tab or leaving this page will terminate the import.",
+			"usersCreated": "Users Created: "
 		}
 	}
 }
