--- a/i18n/de-DE.json
+++ b/i18n/de-DE.json
@@ -3,7 +3,7 @@
 		"title": "CSV-Onboarding",
 		"uploads": {
 			"mainTitle": "Schnelles SmartPBX-Onboarding",
-			"subTitle": "Laden Sie eine CSV-Datei mit den folgenden Spalten hoch: first_name, last_name, email, extension, mac_address, brand, family, model (Vorname, Nachname, E-Mail-Adresse, Nebenstelle, MAC-Adresse, Marke, Baureihe, Modell).",
+			"subTitle": "Laden Sie eine CSV-Datei mit den folgenden Spalten hoch: first_name, last_name, password, email, extension, mac_address, brand, family, model (Vorname, Nachname, E-Mail-Adresse, Nebenstelle, MAC-Adresse, Marke, Baureihe, Modell).",
 			"text": "Legen Sie die Datei, die Sie hochladen möchten, mittels Drag&Drop hier ab, oder navigieren Sie auf Ihrem Computer zu der Datei.",
 			"emptyOption": "",
 			"start": "Auftrag starten",
