Features Addition Sprint CSVUP
* FEATURE: Added the ability to create users without devices.

TESTING: Console logs left in for reviewer testing.
-Single User with a device: PASSED
-Single User without a device: PASSED
-Multi-User with devices: PASSED
-Multi-User with devices and only users: PASSED
-Multi-User with devices with missing information: PASSED

* FEATURE: When adding a user with a device or not the user will be added to the company directory automatically.

TESTING: Logs removed
-Single user with a device - PASSED
-Single user without a device - PASSED
-Multiple users with devices - PASSED
-Multiple users with no devices - PASSED
-Multiple users with and without devices - PASSED

* FEATURE: Added the ability to create an optional softphone for a user with a yes or no option and cleaned up some code to work better for adding an optional device.

TESTED:
-Extensively tested all scenarios on/off - PASSED
-Created No device but softphone - PASSED

* FEATURE: Added provisioner device validation. This feature will match the devices in the CSV with the Audian provisioner API call.

TEST:
-Build user with correct brand/family/model - PASSED
-Do not build user with incorrect brand - PASSED
-Do not build user with incorrect family - PASSED
-Do not build user with incorrect model - PASSED

* Feature Added: Ability to add feature keys to new users with devices added to the account.

* FIX: Updated api call that was incorrect.

* FIXES:
-Resolved resetting feature keys back to none issue.
-Resolved duplicate API calls error.

* FIX 1: None and blank as options for device brands will result in no device being made and if no devices are being added skip the feature key part.
TEST 1: Created 2 users with a none and a blank brand cell. -  PASSED
TEST 2: Created 3 users with 1 user that has a valid device and the others have none and a blank brand cell. -  PASSED

FIX 2: Valid devices with no MAC address will make a device as a 

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -3,7 +3,8 @@
 		"title": "CSV Onboarding",
 		"uploads": {
 			"mainTitle": "Fast SmartPBX Onboarding",
-			"subTitle": "Upload a CSV File with the following columns: first_name, last_name, password, email, extension, mac_address, brand, family, model.",
+			"subTitle": "Upload a CSV File with the following required columns: first_name, last_name, password, email, and, extension. Optional columns are mac_address, brand, family, model, and softphone. For a standardized CSV file, columns settings, and additional information ",
+			"link": "click here",
 			"text": "Drag and drop your file here to upload, or browse your computer.",
 			"emptyOption": "",
 			"start": "Start Job",
@@ -14,13 +15,35 @@
 			"proceed": "Proceed",
 			"undo": "Undo",
 			"errors": {
-				"wrongType": "Invalid type, we only accept CSV files and we received: {{type}}"
+				"wrongType": "Invalid type, we only accept CSV files and we received: {{type}}",
+				"message": "Error: Invalid {{error}} - User {{fName}} {{lName}}. Please assign a valid {{error}} for the user. If this is a valid {{error}} please contact support or build the user manually."
 			},
 			"helpSelection": {
 				"doc": "Additional Information",
 				"description": "Description",
 				"requiredColumns": "Required Columns",
 				"optionalColumns": "Optional Columns"
+			}
+		},
+
+		"keys": {
+			"featureKeys": {
+				"title": "Feature Keys",
+				"label": "Feature key"
+			},
+			"info": {
+				"link": {
+					"showInfo": "Show Info",
+					"hideInfo": "Hide Info"
+				}
+			},
+			"labels": {
+				"name": "Name",
+				"number": "Number",
+				"user": "User",
+				"parkingSpot": "Park",
+				"value": "Value",
+				"slot": "Feature Key "
 			}
 		},
 
