--- a/i18n/de-DE.json
+++ b/i18n/de-DE.json
@@ -61,7 +61,7 @@
 		},
 
 		"results":{
-			"title": "Your CSV Import is completed!",
+			"title": "Your CSV import has completed!",
 			"subTitle": "Please review the results"
 		},
 		
