--- a/i18n/de-DE.json
+++ b/i18n/de-DE.json
@@ -3,7 +3,7 @@
 		"title": "CSV-Onboarding",
 		"landing":{
 			"mainTitle": "Schnelles SmartPBX-Onboarding",
-			"subTitle": "Please select one of the following options. \"Add Users\" is great for creating users on your system,<br/> while \"add User & Devices\" allow you to create a user and associate a SIP device in one job.",
+			"subTitle": "Please select one of the following options. \"Add Users\" is great for creating users on your system,<br/> while \"Add Users & Devices\" allows you to create a user and associate a SIP device in one job.",
 			"btnAddUser": "Add Users",
 			"btnAddUsersDevices": "Add Users & Devices"
 		},
@@ -61,7 +61,7 @@
 		},
 
 		"results":{
-			"title": "Your CSV Import is completed!",
+			"title": "Your CSV import has completed!",
 			"subTitle": "Please review the results"
 		},
 		
