--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -46,9 +46,9 @@
 				"title": "It appears that the columns matching didn't go as expected,<br/> please fix the following issues:",
 				"missing": "Column missing",
 				"tooMany": "Column selected more than once",
-				"uniqEmail": "Email must be unique.",
-				"uniqExtension": "Extension must be unique.",
-				"uniqMac": "Mac Address must be unique."
+				"duplicateEmail": "Email must be unique.",
+				"duplicateExtension": "Extension must be unique.",
+				"duplicateMac": "Mac Address must be unique."
 			},
 			"columns": {
 				"mandatory": "REQUIRED COLUMNS / HEADERS",
