--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -56,6 +56,7 @@
 				"others": "OTHERS"
 			},
 			"hasCustomizations": "Do you want to add JSON configs?",
+			"addToMainDirectory": "Do you want to add users to Company Directory?",
 			"tooltips": {
 				"proceed": "Please map all required fields before proceeding"
 			},
